mType/tests/testFiles/error/error/invalidFieldNameSpecialChar.mt
class TestClass {
    int field$Name;
}
